--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="navbar navbar-dark navbar-expand-md bg-dark">
-      <a class="navbar-brand" href="#"><img src="img/test2.png" height="100px" width="150px"></a>
+      <a class="navbar-brand" href="#"><img src="img/logo5.png" height="50px" width="200px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -83,8 +83,8 @@
     <div class="row mt-5">
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
         <div class="card border-secondary">
-          <img src="img/p1.jpg" alt="Card Back" width="100%" height="400px">
-          <img src="img/p2.jpg" class="img-top" alt="Card Front" width="100%" height="400px">
+          <a href="ProductInfo.html"><img src="img/p1.jpg" alt="Card Back" width="100%" height="400px"> </a>
+          <a href="ProductInfo.html"><img src="img/p2.jpg" class="img-top" alt="Card Front" width="100%" height="400px"></a>
           <div class="card-body text-center">
             <h4 class="card-title"><b>Jeans White</b></h4>
             <p class="card-text">This wear anywhere style will take you from day to night with ease </p>
@@ -97,7 +97,7 @@
               <li><i class="fa fa-star"></i></li>
             </ul>
             <div class="card-footer">
-              <button class="btn btncart">Add To Cart</button>
+              <button class="btn btncart">View More</button>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
               <li><i class="fa fa-star"></i></li>
             </ul>
             <div class="card-footer">
-              <button class="btn btncart">Add To Cart</button>
+              <button class="btn btncart">View More</button>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
               <li><i class="fa fa-star"></i></li>
             </ul>
             <div class="card-footer">
-              <button class="btn btncart">Add To Cart</button>
+              <button class="btn btncart">View More</button>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
               <li><i class="fa fa-star"></i></li>
             </ul>
             <div class="card-footer">
-              <button class="btn btncart">Add To Cart</button>
+              <button class="btn btncart">View More</button>
             </div>
           </div>
         </div>
@@ -224,9 +224,11 @@
   
   </div>
 
-  <footer class="footer bg-dark text-center py-3 mt-3">
-    <p class="textfooter">Copyright &copy; 2019 All Rights Reserved.</p>
-  </footer>
+  <footer class="text-center pt-4 bg-dark ">
+    <div class="footer-copyright text-center py-2">
+        <p class="textfooter mb-3">Copyright &copy; 2019 All Rights Reserved.</p>
+    </div>
+</footer>
   <script src="scripts/jquery-3.5.1.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
