--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="navbar navbar-dark navbar-expand-md bg-dark">
-            <a class="navbar-brand" href="#"><img src="img/logo3.png" height="50px" width="150px"></a>
+            <a class="navbar-brand" href="#"><img src="img/logo5.png" height="50px" width="150px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,38 +82,42 @@
                         <p><b>Enquiring about Wholesale of shopping Traders:</b></p>
                         <p>Please email us here: wholesale@shopping.com, or call us on +61 2 4327 8640</p>
 
-                        <form method="post">
+                        <form method="GET" id="contactfrom">
                             <div class="row">
                                 <div class="form-group col-sm-4">
                                     <label>Name</label>
-                                    <input type="text" class="form-control" name="name" required="">
+                                    <input type="text" class="form-control" name="name" id="name">
+                                    <span id="name" class="text-light"></span>
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label>Email</label>
-                                    <input type="email" class="form-control" name="email" required="">
+                                    <input type="email" class="form-control" name="email" id="email">
+
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label>PhoneNo</label>
-                                    <input type="tel" class="form-control" name="phone">
-
+                                    <input type="tel" class="form-control" name="phone" id="cnumber">
+                                    <span id="phone_error" class="text-light"></span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label>Message</label>
-                                <textarea class="form-control" name="message" rows="7"></textarea>
+                                <textarea class="form-control" data-for="message" id="message" name="message" rows="7"></textarea>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-lg btn-success">CONTACT US</button>
+                                <button type="submit" class="btn btn-lg btn-success" id="btncontact">CONTACT US</button>
                             </div>
-                       </form>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="bg-dark text-center py-3 ">
-        <p class="textfooter">Copyright &copy; 2019 All Rights Reserved.</p>
+    <footer class="text-center pt-4 bg-dark ">
+        <div class="footer-copyright text-center py-2">
+            <p class="textfooter mb-3">Copyright &copy; 2019 All Rights Reserved.</p>
+        </div>
     </footer>
     <script src="scripts/jquery-3.5.1.min.js"></script>
     <script src="scripts/popper.min.js"></script>
