--- a/ProductInfo.html
+++ b/ProductInfo.html
@@ -41,12 +41,12 @@
 
                 </ul>
                 <div class="search-container">
-                    <input type="text" placeholder="Search.." name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <input type="text" placeholder="Search.." name="search"><button type="submit"><i class="fa fa-search"></i></button>
                 </div>
                 <ul class="nav navbar-nav flex-row">
                     <li class="nav-item"><a class="nav-link" href="">Sign in <i class="fa fa-user"></i></a> </li>
-                    <li class="nav-item"><a class="nav-link" href="">View Cart <i class="fa fa-shopping-cart"></i></a>
+                    <li class="nav-item"><a class="nav-link" href="">View Cart <i class="fa fa-shopping-cart"></i><span
+                                id="counter" class="badge badge-light"></span></a>
                     </li>
                     <!-- <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-instagram"></i></a></li> -->
 
@@ -56,17 +56,17 @@
         </nav>
     </header>
 
-    <div class="container mt-5 ">
-        <h2 class="text-center">STRAIGHT LEG JEAN IN WHITE</h2>
-        <div class="row mt-5 mb-5">
+    <div class="container mt-5 mb-3">
+        <h2 class="text-center">Men Black & Grey Colourblocked Round Neck T-shirt</h2>
+        <div class="row mt-5 mb-4">
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <img src="img/p1.jpg" class="img-fluid" alt="Card Back" width="100%" height="600px">
+                <img src="img/tred1.jpg" class="img-fluid" alt="Card Back" width="100%" height="600px">
             </div>
-            
+
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <img src="img/p2.jpg" class="img-fluid" alt="Card Front" width="100%" height="600px">
+                <img src="img/tred2.jpg" class="img-fluid" alt="Card Front" width="100%" height="600px">
             </div>
-            
+
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                 <span><b>Price</b></span>
                 <p class="price">$79</p>
@@ -88,7 +88,7 @@
                     </span>
                 </div>
                 <p class="mt-3"><b>Select Size</b></p>
-                <div class="mt-1 mb-5">
+                <div class="mt-1 mb-3">
                     <div class="form-check form-check-inline pl-0">
                         <input type="radio" class="form-check-input" id="small" name="materialExampleRadios" checked>
                         <label class="form-check-label small text-uppercase card-link-secondary" for="small">S</label>
@@ -110,127 +110,144 @@
                         <label class="form-check-label small text-uppercase card-link-secondary" for="large">XXL</label>
                     </div>
                 </div>
-                <div class="mb-5">
-                    <button class="btn btn-secondary btn-block">Add To cart</button>
+                <div class="mb-3">
+                    <button class="btn btn-danger btn-block">Add To cart</button>
                 </div>
                 <div>
                     <p><b>Product Description</b></p>
-                    <p class="text-justify">Meet the Throwback Jean - the Shopping Traders version of the 'Mom Jean'. We've taken this trend
-                        and re-invented it just for you. Cut from 10 ounce rigid denim, mid rise and perfectly
-                        distressed. This wear anywhere style will take you from day to night with ease </p>
+                    <p class="text-justify">Black and grey colourblocked T-shirt, has a round neck, long sleeves.The
+                        model (height 6') is wearing a size M
+                    <p></p>
                 </div>
-                <div class="mt-5 mb-3">
+                <div>
+                    <b>Best Offers</b>
 
-                    <a data-toggle="collapse" href="#detail" aria-expanded="false">Detail</a>
-                    <div class="collapse" id="detail">
-                        <li>garment dyed black</li>
-                        <li>button down fly</li>
-                        <li>relaxed fit</li>
-                        <li>raw hem</li>
-                        <li>designed to fade</li>
-                        <li>perfectly distressed</li>
-                        <li>cold machine wash</li>
-                        <li>wear them in, love them for life</li>
-                    </div>
-                    <a data-toggle="collapse" href="#review" aria-expanded="false">Rating</a>
-                    <div class="collapse" id="review">
-                        <div class="row">
-                            <ul class="row productrating">
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
+                    <ul>
+                        <li>Best Price:<b>$25</b></li>
+                        <li>Applicable on: Orders above Rs. 1999 (only on first purchase)</li>
+                        <li>Coupon code: <b>MYNTRA300</b></li>
+                        <li>Coupon Discount: $10 off (check cart for final savings)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-2 mb-3">
+            <div class="col-md-8">
+                <img src="img/trend3.jpg" class="img-fluid" height="400px" width="100%">
+            </div>
+            <div class="col-md-4">
+                <div class="card-header">
+                    <a class="card-link" data-toggle="collapse" href="#Detail">Detail</a>
+                </div>
+                <div id="Detail" class="collapse show" data-parent="#accordion">
+                    <div id="accordion">
+                        <div class="card-body">
+                            <ul>
+                                <li>garment dyed black</li>
+                                <li>button down fly</li>
+                                <li>relaxed fit</li>
+                                <li>raw hem</li>
+                                <li>designed to fade</li>
+                                <li>perfectly distressed</li>
+                                <li>cold machine wash</li>
+                                <li>wear them in, love them for life</li>
                             </ul>
-                            <div class="row ml-3">
-                                <div class="col text-center">
-                                    <a href="#" data-toggle="modal" data-target="#writereview">Write Review</a>
-                                </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-header">
+                    <a href="#" data-toggle="modal" data-target="#writereview">Write Review</a>
+                </div>
+                <div class="card-header">
+                    <a class="collapsed card-link" data-toggle="collapse" href="#Share">Share</a>
+                </div>
+                <div id="Share" class="collapse show" data-parent="#accordion">
+                    <div class="card-body">
+                        <ul class="row productrating">
+                            <li><i class="fa fa-instagram mr-3"></i></li>
+                            <li><i class="fa fa-twitter mr-3"></i></li>
+                            <li><i class="fa fa-facebook mr-3"></i></li>
+                            <li><i class="fa fa-envelope"></i></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="modal fade" id="writereview" tabindex="-1" role="dialog"
+                    aria-labelledby="basicModal" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="myModalLabel">Review</h4>
+                                <button type="button" class="close" data-dismiss="modal" ar ia-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
-                        </div>
-                    </div>
-                    <a data-toggle="collapse" href="#share" aria-expanded="false">Share</a>
-                    <div class="collapse" id="share">
-                        <div class="row">
-                            <ul class="row productrating">
-                                <li><i class="fa fa-instagram mr-3"></i></li>
-                                <li><i class="fa fa-twitter mr-3"></i></li>
-                                <li><i class="fa fa-facebook mr-3"></i></li>
-                                <li><i class="fa fa-envelope"></i></li>
-                                <!-- <li><i class="fa fa-star"></i></li> -->
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="modal fade" id="writereview" tabindex="-1" role="dialog" aria-labelledby="basicModal"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title" id="myModalLabel">Review</h4>
-                                    <button type="button" class="close" data-dismiss="modal" ar ia-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                            <img src="img/p2.jpg" class="img-fluid" alt="Card Back" width="100%"
-                                                height="600px">
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                            <form method="post">
-                                                <div class="row">
-                                                    <div class="form-group col-sm-12">
-                                                        <label>Rating</label>
-                                                        <div
-                                                            class="starrating risingstar flex-row-reverse d-flex justify-content-center">
-                                                            <input type="radio" id="star5" name="rating"
-                                                                value="5" /><label for="star5" title="5 star"></label>
-                                                            <input type="radio" id="star4" name="rating"
-                                                                value="4" /><label for="star4" title="4 star"></label>
-                                                            <input type="radio" id="star3" name="rating"
-                                                                value="3" /><label for="star3" title="3 star"></label>
-                                                            <input type="radio" id="star2" name="rating"
-                                                                value="2" /><label for="star2" title="2 star"></label>
-                                                            <input type="radio" id="star1" name="rating"
-                                                                value="1" /><label for="star1" title="1 star"></label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group col-sm-12">
-                                                        <label>Name</label>
-                                                        <input type="text" class="form-control" name="name" required="">
-                                                    </div>
-                                                    <div class="form-group col-sm-12">
-                                                        <label>Email</label>
-                                                        <input type="email" class="form-control" name="email"
-                                                            required="">
-                                                    </div>
-                                                    <div class="form-group col-sm-12">
-                                                        <label>Review Subject</label>
-                                                        <input type="text" class="form-control" name="rsubject"
-                                                            required="">
-                                                    </div>
-                                                    <div class="form-group col-sm-12">
-                                                        <label>Comments</label>
-                                                        <textarea class="form-control" name="comments" required rows="5"
-                                                            cols="3"></textarea>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <img src="img/tred1.jpg" class="img-fluid" alt="Card Back" width="100%"
+                                            height="600px">
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <form method="post">
+                                            <div class="row">
+                                                <div class="form-group col-sm-12">
+                                                    <label>Rating</label>
+                                                    <div
+                                                        class="starrating risingstar flex-row-reverse d-flex justify-content-center">
+                                                        <input type="radio" id="star5" name="rating"
+                                                            value="5" /><label for="star5"
+                                                            title="5 star"></label>
+                                                        <input type="radio" id="star4" name="rating"
+                                                            value="4" /><label for="star4"
+                                                            title="4 star"></label>
+                                                        <input type="radio" id="star3" name="rating"
+                                                            value="3" /><label for="star3"
+                                                            title="3 star"></label>
+                                                        <input type="radio" id="star2" name="rating"
+                                                            value="2" /><label for="star2"
+                                                            title="2 star"></label>
+                                                        <input type="radio" id="star1" name="rating"
+                                                            value="1" /><label for="star1"
+                                                            title="1 star"></label>
                                                     </div>
                                                 </div>
-                                            </form>
-                                        </div>
+                                                <div class="form-group col-sm-12">
+                                                    <label>Name</label>
+                                                    <input type="text" class="form-control" name="name"
+                                                        required="">
+                                                </div>
+                                                <div class="form-group col-sm-12">
+                                                    <label>Email</label>
+                                                    <input type="email" class="form-control" name="email"
+                                                        required="">
+                                                </div>
+                                                <div class="form-group col-sm-12">
+                                                    <label>Review Subject</label>
+                                                    <input type="text" class="form-control" name="rsubject"
+                                                        required="">
+                                                </div>
+                                                <div class="form-group col-sm-12">
+                                                    <label>Comments</label>
+                                                    <textarea class="form-control" name="comments" required
+                                                        rows="5" cols="3"></textarea>
+                                                </div>
+                                            </div>
+                                        </form>
                                     </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-primary">Submit</button>
-                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary">Submit</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
+
 
     </div>
 
@@ -243,6 +260,7 @@
     <script src="scripts/popper.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 </body>
 
