--- a/Contact.html
+++ b/Contact.html
@@ -41,8 +41,7 @@
 
                 </ul>
                 <div class="search-container">
-                    <input type="text" placeholder="Search.." name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <input type="text" placeholder="Search.." name="search"><button type="submit"><i class="fa fa-search"></i></button>
                 </div>
                 <ul class="nav navbar-nav flex-row">
                     <li class="nav-item"><a class="nav-link" href="">Sign in <i class="fa fa-user"></i></a></li>
@@ -123,6 +122,7 @@
     <script src="scripts/popper.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 </body>
 
